Create a book with associate genre and author
